{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 212,
  "lineage": "87aa3e79-2da0-8999-2cc3-97ec1c5faf3e",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:security-group/sg-05af2ae430641c248",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cc4b94fcc2ef798"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cc4b94fcc2ef798"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-05af2ae430641c248",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cc4b94fcc2ef798"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "todo-eks-cluster-cluster-20230318104707741600000005",
            "name_prefix": "todo-eks-cluster-cluster-",
            "owner_id": "313382416572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todo-eks-cluster-cluster",
              "application": "todo-app",
              "environment": "development"
            },
            "tags_all": {
              "Name": "todo-eks-cluster-cluster",
              "application": "todo-app",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:security-group/sg-01cc4b94fcc2ef798",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05af2ae430641c248"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-01cc4b94fcc2ef798",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03b076ba72347ae2e",
                  "sg-0c1827f9ecab629fe"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05af2ae430641c248"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05af2ae430641c248"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "todo-eks-cluster-node-20230318104707866900000007",
            "name_prefix": "todo-eks-cluster-node-",
            "owner_id": "313382416572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todo-eks-cluster-node",
              "application": "todo-app",
              "environment": "development",
              "kubernetes.io/cluster/todo-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "todo-eks-cluster-node",
              "application": "todo-app",
              "environment": "development",
              "kubernetes.io/cluster/todo-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-918376517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05af2ae430641c248",
            "security_group_rule_id": "sgr-050fc0c1de83a4e64",
            "self": false,
            "source_security_group_id": "sg-01cc4b94fcc2ef798",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-610353681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05af2ae430641c248",
            "security_group_rule_id": "sgr-03f11b6104b210abf",
            "self": false,
            "source_security_group_id": "sg-01cc4b94fcc2ef798",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1417354193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05af2ae430641c248",
            "security_group_rule_id": "sgr-027827a55c8cfa419",
            "self": false,
            "source_security_group_id": "sg-01cc4b94fcc2ef798",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1955740549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-02c028b9bbb03223b",
            "self": false,
            "source_security_group_id": "sg-05af2ae430641c248",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-295527091",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-0b41427259407bb91",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-834445395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-0511fb94505173869",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1327662430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-08ca4508721a65aab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1997063304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-03d4fefe15f98b59a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-110147858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-09b0f74954b8a780f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1439912015",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-048eda68f04178927",
            "self": false,
            "source_security_group_id": "sg-05af2ae430641c248",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1656043494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-0b0831501183e1d60",
            "self": false,
            "source_security_group_id": "sg-05af2ae430641c248",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1309732792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-03d4fefe15f98b59a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-363901863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-01cc4b94fcc2ef798",
            "security_group_rule_id": "sgr-09b0f74954b8a780f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"dev\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:security-group/sg-0745c7faa49fceffa",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0745c7faa49fceffa",
            "ingress": [],
            "name": "dev-eks-node-group-20230318104707852600000006",
            "name_prefix": "dev-eks-node-group-",
            "owner_id": "313382416572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-eks-node-group",
              "application": "todo-app",
              "environment": "development"
            },
            "tags_all": {
              "Name": "dev-eks-node-group",
              "application": "todo-app",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065e56f0f6265555f",
            "association_id": "eipassoc-081c4c9f79e17f2cc",
            "domain": "vpc",
            "id": "eipalloc-065e56f0f6265555f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0230e6ff19f0bbc1a",
            "private_dns": "ip-10-0-6-131.ec2.internal",
            "private_ip": "10.0.6.131",
            "public_dns": "ec2-3-230-45-36.compute-1.amazonaws.com",
            "public_ip": "3.230.45.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:internet-gateway/igw-0376c6499bd7c61fe",
            "id": "igw-0376c6499bd7c61fe",
            "owner_id": "313382416572",
            "tags": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065e56f0f6265555f",
            "connectivity_type": "public",
            "id": "nat-01526eadec313d079",
            "network_interface_id": "eni-0230e6ff19f0bbc1a",
            "private_ip": "10.0.6.131",
            "public_ip": "3.230.45.36",
            "subnet_id": "subnet-0142ee852bc016622",
            "tags": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.todo-vpc.aws_eip.nat",
            "module.todo-vpc.aws_internet_gateway.this",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f5b002c9da9ed6551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01526eadec313d079",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f5b002c9da9ed655",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_eip.nat",
            "module.todo-vpc.aws_internet_gateway.this",
            "module.todo-vpc.aws_nat_gateway.this",
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0376c6499bd7c61fe",
            "id": "r-rtb-018980a1fa462a56d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018980a1fa462a56d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_internet_gateway.this",
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:route-table/rtb-0f5b002c9da9ed655",
            "id": "rtb-0f5b002c9da9ed655",
            "owner_id": "313382416572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01526eadec313d079",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-vpc-private",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-private",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:route-table/rtb-018980a1fa462a56d",
            "id": "rtb-018980a1fa462a56d",
            "owner_id": "313382416572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0376c6499bd7c61fe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-vpc-public",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-public",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4471880a660daad",
            "route_table_id": "rtb-0f5b002c9da9ed655",
            "subnet_id": "subnet-0d134ff0318bbd029"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a72d144652547ab5",
            "route_table_id": "rtb-0f5b002c9da9ed655",
            "subnet_id": "subnet-0af21fcbc7223ea61"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c5df9dc4ab05823",
            "route_table_id": "rtb-0f5b002c9da9ed655",
            "subnet_id": "subnet-03240b6615e0b6646"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5de7dae2e9c90c",
            "route_table_id": "rtb-0f5b002c9da9ed655",
            "subnet_id": "subnet-04ee4b49714713c48"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0768c8e9963da0cf4",
            "route_table_id": "rtb-0f5b002c9da9ed655",
            "subnet_id": "subnet-0e8df60cf17507fb0"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042ad4b852c2e2166",
            "route_table_id": "rtb-018980a1fa462a56d",
            "subnet_id": "subnet-0142ee852bc016622"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a25dc766587f31",
            "route_table_id": "rtb-018980a1fa462a56d",
            "subnet_id": "subnet-0371acaed6cf93673"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fd37727e44b5f95",
            "route_table_id": "rtb-018980a1fa462a56d",
            "subnet_id": "subnet-01c8f17ec20edb984"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0031fd6e983fee5c0",
            "route_table_id": "rtb-018980a1fa462a56d",
            "subnet_id": "subnet-042eae35aa2f0ee21"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f2d86a8bf0e3f66",
            "route_table_id": "rtb-018980a1fa462a56d",
            "subnet_id": "subnet-0fa190ca5da9ef226"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0d134ff0318bbd029",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d134ff0318bbd029",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0af21fcbc7223ea61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af21fcbc7223ea61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-03240b6615e0b6646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03240b6615e0b6646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-04ee4b49714713c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ee4b49714713c48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0e8df60cf17507fb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8df60cf17507fb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0142ee852bc016622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0142ee852bc016622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0371acaed6cf93673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0371acaed6cf93673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-01c8f17ec20edb984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c8f17ec20edb984",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-042eae35aa2f0ee21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042eae35aa2f0ee21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0fa190ca5da9ef226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa190ca5da9ef226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06be9118d93ec86fa"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:vpc/vpc-06be9118d93ec86fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09268616278bc52fa",
            "default_route_table_id": "rtb-0b72dafe3d349bac9",
            "default_security_group_id": "sg-0b1b15a07227915e3",
            "dhcp_options_id": "dopt-03f77882641005d1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06be9118d93ec86fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b72dafe3d349bac9",
            "owner_id": "313382416572",
            "tags": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}